src/objects/Student_Test__c.object
<CustomObject>
    <fields>
        <fullName>Marks_Obtained__c</fullName>
        <label>Marks Obtained</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Course__c</fullName>
        <label>Student_Course</label>
        <referenceTo>Student_Course__c</referenceTo>
        <relationshipLabel>Students_Tests</relationshipLabel>
        <relationshipName>Students_Tests</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Students_Tests</relationshipLabel>
        <relationshipName>Students_Tests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test</label>
        <referenceTo>Performance_Tests__c</referenceTo>
        <relationshipLabel>Students_Tests</relationshipLabel>
        <relationshipName>Students_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student_Test</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Student_Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students_Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>